# oa

./: .buildinfo  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/oa/: _resources.html  audio.html  base.html  batch_embeddings.html  batches.html  chats.html  oa_types.html  openai_specs.html  stores.html  tools.html  util.html  vector_stores.html
_modules/oa/examples/: aesop_fables.html  batch_embeddings_examples.html  illustrate_stories.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: oa.rst.txt
_sources/module_docs/oa/: _params.rst.txt  _resources.rst.txt  ask.rst.txt  audio.rst.txt  base.rst.txt  batch_embeddings.rst.txt  batches.rst.txt  chats.rst.txt  oa_types.rst.txt  openai_specs.rst.txt  scrap.rst.txt  stores.rst.txt  tools.rst.txt  util.rst.txt  vector_stores.rst.txt
_sources/module_docs/oa/examples/: aesop_fables.rst.txt  batch_embeddings_examples.rst.txt  illustrate_stories.rst.txt
misc/: oa - An OpenAI facade.ipynb  oa - Making an Aesop fables children's book oa.ipynb  oa - Various use cases.ipynb  oa - chats acquisition and parsing.ipynb  oa - constraining AI answers.ipynb  oa - making prompt functions.ipynb  oa - wips.ipynb  rendered_chat_contents.html
misc/data/resources/: api_pricing_schema.json  openai_api_pricing.html  openai_api_pricing_info.json  openai_api_pricing_info_from_ai.json  openai_api_pricing_schema_description.txt
module_docs/: oa.html
module_docs/oa/: _params.html  _resources.html  ask.html  audio.html  base.html  batch_embeddings.html  batches.html  chats.html  oa_types.html  openai_specs.html  scrap.html  stores.html  tools.html  util.html  vector_stores.html
module_docs/oa/examples/: aesop_fables.html  batch_embeddings_examples.html  illustrate_stories.html
oa/: __init__.py  _params.py  _resources.py  ask.py  audio.py  base.py  batch_embeddings.py  batches.py  chats.py  oa_types.py  openai_specs.py  stores.py  tools.py  util.py  vector_stores.py
oa/data/: json_schema_example.json  openai_api_pricing_info.json
oa/data/templates/chatgpt/: define_jargon.txt  description_to_software_specs.txt  make_synopsis.txt  prompt_template_improver.txt  prompt_template_starter.txt  sentiment_analysis.txt  simple_tests_for_code.txt  specs_to_code_for_dag.txt  suggest_names.txt  user_story_to_code_for_dag.txt
oa/examples/: aesop_fables.py  batch_embeddings_examples.py  illustrate_stories.py
oa/tests/: test_base.py  test_search.py  test_tools.py  test_util.py
