[metadata]
name = oa
version = 0.0.13
url = https://github.com/thorwhalen/oa
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Python interface to OpenAi
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = oa

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	openai
	dol
	i2
        config2py
