[metadata]
name = oa
version = 0.1.37
url = https://github.com/thorwhalen/oa
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Python interface to OpenAI
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	openai
	llm
	chat bot
	chatGPT
display_name = oa

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	openai
	i2
	dol
	config2py
	graze
	jsonref
	lkj
	ju
	PyYAML
	tiktoken
	python-dateutil

[options.package_data]
oa = data/*

