[metadata]
name = oa
version = 0.1.45
description = Python interface to OpenAI
url = https://github.com/thorwhalen/oa
author = Thor Whalen
license = Apache-2.0
keywords = 
		openai
		llm
		chat bot
		chatGPT

[options]
packages = find:
include_package_data = True
zip_safe = False
name = oa
version = 0.1.45
description = Python interface to OpenAI
url = https://github.com/thorwhalen/oa
author = Thor Whalen
license = Apache-2.0
keywords = ['openai', 'llm', 'chat bot', 'chatGPT']
install_requires = ['openai', 'i2', 'dol', 'config2py', 'graze', 'jsonref', 'lkj', 'ju', 'PyYAML', 'tiktoken', 'python-dateutil', 'beautifulsoup4', 'dill']

[options.extras_require]
testing = 
		

[options.package_data]
oa = data/*

